--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
-    <!-- Plugin CSS -->
-    <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
-
     <!-- Theme CSS -->
     <link href="css/creative.min.css" rel="stylesheet">
 
@@ -172,10 +169,11 @@
                     <hr class="primary">
                 </div>
             </div>
-            <div class="row no-gutter popup-gallery">
+            <div class="row no-gutter">
+
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/arouca-foto.png" class="portfolio-box">
-                        <img src="img/portfolio/fullsize/arouca-foto.png" class="img-responsive" alt="arouca">
+                    <div class="portfolio-box" data-toggle="modal" data-target="#modal1">
+                        <img src="img/portfolio/thumbnails/arouca-foto.png" class="img-responsive" alt="arouca">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -183,14 +181,37 @@
                                     (2014-2015)
                                 </div>
                                 <div class="project-name">
-                                    Projeto: Arouca
+                                    Projeto: Plataforma Arouca-Sistema de Informação dos Profissionais de Saúde do Brasil
                                 </div>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
+                <!-- Modal -->
+				<div id="modal1" class="modal fade" role="dialog">
+				  <div class="modal-dialog">
+				    <!-- Modal content-->
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <button type="button" class="close" data-dismiss="modal">&times;</button>
+				        <h4 class="modal-title">Detalhes</h4>
+				      </div>
+				      <div class="modal-body">
+				        <p>Desenvolvimento de funcionalidades em código Java, XHTML, CSS e JavaScript;</p>
+				        <p>Testes de unidade e correção de bugs;</p>
+				        <p>Frameworks: Hibernate, RichFaces e Arangi (criado pela própria empresa);</p>
+				        <p>Metodologia de desenvolvimento SCRUM Ágil.</p>
+				        <p>Link: <a href="http://arouca.unasus.gov.br/" target="_blank">arouca.unasus.gov.br</a></p>
+				      </div>
+				      <div class="modal-footer">
+				        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+				      </div>
+				    </div>
+				  </div>
+				</div>
+
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/ammpmg-home-foto.png" class="portfolio-box">
+                    <div class="portfolio-box" data-toggle="modal" data-target="#modal2">
                         <img src="img/portfolio/thumbnails/ammpmg-home-foto.png" class="img-responsive" alt="ammp-mg">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -203,10 +224,32 @@
                                 </div>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
+                <!-- Modal -->
+				<div id="modal2" class="modal fade" role="dialog">
+				  <div class="modal-dialog">
+				    <!-- Modal content-->
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <button type="button" class="close" data-dismiss="modal">&times;</button>
+				        <h4 class="modal-title">Detalhes</h4>
+				      </div>
+				      <div class="modal-body">
+				        <p>Desenvolvimento Front-end de todas as páginas do site;</p>
+				        <p>Codificação, testes do layout e correção de bugs;</p>
+				        <p>Frameworks: Bootstrap (CSS/JS) e FullCalendar (CSS/JS).</p>
+				        <p>Link: <a href="http://www.ammp.org.br/" target="_blank">www.ammp.org.br</a></p>
+				      </div>
+				      <div class="modal-footer">
+				        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+				      </div>
+				    </div>
+				  </div>
+				</div>
+
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/jam-2016-home-foto.png" class="portfolio-box">
+                    <div class="portfolio-box" data-toggle="modal" data-target="#modal3">
                         <img src="img/portfolio/thumbnails/jam-2016-home-foto.png" class="img-responsive" alt="jam2016">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -219,10 +262,31 @@
                                 </div>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
+                <!-- Modal -->
+				<div id="modal3" class="modal fade" role="dialog">
+				  <div class="modal-dialog">
+				    <!-- Modal content-->
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <button type="button" class="close" data-dismiss="modal">&times;</button>
+				        <h4 class="modal-title">Detalhes</h4>
+				      </div>
+				      <div class="modal-body">
+				        <p>Desenvolvimento em plataforma WordPress de todas as páginas do site;</p>
+				        <p>Codificação, testes e correção de bugs;</p>
+				        <p>Link: <a href="http://jam2016.com.br" target=_blank>jam2016.com.br</a></p>				        
+				      </div>
+				      <div class="modal-footer">
+				        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+				      </div>
+				    </div>
+				  </div>
+				</div>
+
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/landing-page-eduxe-foto.png" class="portfolio-box">
+                    <div class="portfolio-box" data-toggle="modal" data-target="#modal4">
                         <img src="img/portfolio/thumbnails/landing-page-eduxe-foto.png" class="img-responsive" alt="eduxe">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -235,10 +299,31 @@
                                 </div>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
+                <!-- Modal -->
+				<div id="modal4" class="modal fade" role="dialog">
+				  <div class="modal-dialog">
+				    <!-- Modal content-->
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <button type="button" class="close" data-dismiss="modal">&times;</button>
+				        <h4 class="modal-title">Detalhes</h4>
+				      </div>
+				      <div class="modal-body">
+				        <p>Desenvolvimento da Landing Page em plataforma WordPress;</p>
+				        <p>Codificação, testes e correção de bugs;</p>	
+				        <p>Link: <a href="http://www.eduxe.com.br" target="_blank">www.eduxe.com.br</a></p>			      
+				      </div>
+				      <div class="modal-footer">
+				        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+				      </div>
+				    </div>
+				  </div>
+				</div>
+
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/vendomeuantigo-foto-logo.png" class="portfolio-box">
+                    <div class="portfolio-box" data-toggle="modal" data-target="#modal5">
                         <img src="img/portfolio/thumbnails/vendomeuantigo-foto-logo.png" class="img-responsive" alt="vendo-meu-antigo">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -251,10 +336,32 @@
                                 </div>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
+                <!-- Modal -->
+				<div id="modal5" class="modal fade" role="dialog">
+				  <div class="modal-dialog">
+				    <!-- Modal content-->
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <button type="button" class="close" data-dismiss="modal">&times;</button>
+				        <h4 class="modal-title">Detalhes</h4>
+				      </div>
+				      <div class="modal-body">
+				        <p>Atuação na fase final do projeto;</p>
+				        <p>Desenvolvimento em PHP, HTML, CSS e JavaScript/AJAX em plataforma WordPress;</p>
+				        <p>Validação, testes e correção de bugs legados;</p>
+				        <p><strong> *Site fora do ar.</strong></p>
+				      </div>
+				      <div class="modal-footer">
+				        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+				      </div>
+				    </div>
+				  </div>
+				</div>
+
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/rockstar-foto-logo.png" class="portfolio-box">
+                    <div class="portfolio-box" data-toggle="modal" data-target="#modal6">
                         <img src="img/portfolio/thumbnails/rockstar-foto-logo.png" class="img-responsive" alt="rockstar">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -267,8 +374,28 @@
                                 </div>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
+                <!-- Modal -->
+				<div id="modal6" class="modal fade" role="dialog">
+				  <div class="modal-dialog">
+				    <!-- Modal content-->
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <button type="button" class="close" data-dismiss="modal">&times;</button>
+				        <h4 class="modal-title">Detalhes</h4>
+				      </div>
+				      <div class="modal-body">
+				        <p>Desenvolvimento de algoritmo em PHP, em plataforma WordPress, para exibir um ranking de autores por número de artigos produzidos, exibindo o perfil de cada um.</p>
+				        <p><strong>*Site em construção.</strong></p>
+				      </div>
+				      <div class="modal-footer">
+				        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+				      </div>
+				    </div>
+				  </div>
+				</div>
+
             </div>
         </div>
     </section>
@@ -301,7 +428,6 @@
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
-    <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Theme JavaScript -->
     <script src="js/creative.min.js"></script>
