--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <img src="img/media/lucasmnovaes-foto.jpg" class="img-circle" alt="Cinque Terre">
                     <p></p>
-			<p class="text-faded">Lucas Marcondes Novaes, 28 anos, Lagoa Santa - MG<br/>
+			<p class="text-faded">Lucas Marcondes Novaes, 28 anos, natural de Lagoa Santa - MG<br/>
 				Graduado em Sistemas de Informação pela PUC Minas<br/>
-                    Desenvolvedor Web desde 2014</p>
+                    Analista e Desenvolvedor Web</p>
                     <a href="#services" class="page-scroll btn btn-default sr-button"><i class="fa fa-2x fa-angle-double-down"></i></a>
                 </div>
             </div>
@@ -393,7 +393,7 @@
 				      <div class="modal-body">
 					<p></p>
 				        <p>Desenvolvimento de algoritmo em PHP para exibir um ranking de autores por número de artigos produzidos, exibindo o perfil de cada um;</p>
-					<p>Observação: <br/>Projeto em andamento;</p>
+					<p>Observação: <br/>Plataforma em construção;</p>
 					<p><strong>Link (website do cliente): <a href="http://rockstar.mus.br" target="_blank">rockstar.mus.br</a></strong></p>
 				      </div>
 				      <div class="modal-footer">
