--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <p></p>
 			<p class="text-faded">Lucas Marcondes Novaes, 28 anos, natural de Lagoa Santa - MG<br/>
 				Graduado em Sistemas de Informação pela PUC Minas<br/>
-                    Analista e Desenvolvedor Web</p>
+                    Desenvolvedor Web desde 2014</p>
                     <a href="#services" class="page-scroll btn btn-default sr-button"><i class="fa fa-2x fa-angle-double-down"></i></a>
                 </div>
             </div>
