--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Desenvolvedor Java (Estágio) - UFMG-DCC<br/>
+                                    Desenvolvedor Java - UFMG-DCC<br/>
                                     (2014-2015)
                                 </div>
                                 <div class="project-name">
