--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <a class="page-scroll" href="#services">Conhecimentos</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Trabalhos</a>
+                        <a class="page-scroll" href="#portfolio">Experiência</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contatos</a>
@@ -171,7 +171,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Trabalhos</h2>
+                    <h2 class="section-heading">Experiência</h2>
                     <hr class="primary">
                 </div>
             </div>
