--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 				      <div class="modal-body">
 					<p></p>
 				        <p>Desenvolvimento de algoritmo em PHP para exibir um ranking de autores por número de artigos produzidos, exibindo o perfil de cada um;</p>
-					<p>Observação: <br/>Plataforma em construção;</p>
+					<p>Implementação de API: Integração do website com a Plataforma Hotmart;</p>
 					<p><strong>Link (website do cliente): <a href="http://rockstar.mus.br" target="_blank">rockstar.mus.br</a></strong></p>
 				      </div>
 				      <div class="modal-footer">
