--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Desenvolvedor Web (Freelancer) - Evolua<br/>
+                                    Desenvolvedor Web (Freelancer)<br/>
                                     (2016)
                                 </div>
                                 <div class="project-name">
@@ -371,11 +371,11 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Desenvolvedor Web (Freelancer) - Rockstar<br/>
+                                    Desenvolvedor Web (Freelancer)<br/>
                                     (2016)
                                 </div>
                                 <div class="project-name">
-                                    Projeto: Plataforma Rockstar
+                                    Projeto: Empreendedoras
                                 </div>
                             </div>
                         </div>
@@ -393,8 +393,7 @@
 				      <div class="modal-body">
 					<p></p>
 				        <p>Desenvolvimento de algoritmo em PHP para exibir um ranking de autores por número de artigos produzidos, exibindo o perfil de cada um;</p>
-					<p>Implementação de API: Integração do website com a Plataforma Hotmart;</p>
-					<p><strong>Link (website do cliente): <a href="http://rockstar.mus.br" target="_blank">rockstar.mus.br</a></strong></p>
+					<p><strong>Link: <a href="http://empreendedoras.com.br" target="_blank">empreendedoras.com.br</a></strong></p>
 				      </div>
 				      <div class="modal-footer">
 				        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
