--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 
                 <div class="col-lg-4 col-sm-6">
                     <div class="portfolio-box" data-toggle="modal" data-target="#modal6">
-                        <img src="img/portfolio/thumbnails/rockstar-foto-logo.png" class="img-responsive" alt="rockstar">
+                        <img src="img/portfolio/thumbnails/empreendedoras-logo.png" class="img-responsive" alt="empreendedoras">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
