--- a/index.html
+++ b/index.html
@@ -414,6 +414,10 @@
                     <hr class="primary">
                     <p></p>
                 </div>
+		<div class="col-lg-4 col-lg-offset-2 text-center">
+                    <i class="fa fa-github fa-3x sr-contact"></i>
+                    <p><a href="https://github.com/LucasNovaes">Github</a></p>
+                </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
                     <p><a href="tel:(31) 99407-0476">(31) 99407-0476</a></p>
