--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                     <hr class="primary">
                     <p></p>
                 </div>
-                <div class="col-lg-6 col-lg-offset-2 text-center">
+                <div class="col-lg-6 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
                     <p><a href="tel:(31) 99407-0476">(31) 99407-0476</a></p>
                 </div>
@@ -423,12 +423,10 @@
                     <p><a href="mailto:lucasmnovaes@gmail.com">lucasmnovaes@gmail.com</a></p>
                 </div>
 		<div class="col-lg-4 text-center">
-                    <i class="fa fa-github fa-3x sr-contact"></i>
-                    <p><a href="https://github.com/LucasNovaes">Github</a></p>
+                    <p><a href="https://www.linkedin.com/in/lucasmnovaes/"><i class="fa fa-linkedin fa-3x sr-contact"></i></a></p>
                 </div>
 		<div class="col-lg-4 text-center">
-                    <i class="fa fa-github fa-3x sr-contact"></i>
-                    <p><a href="https://github.com/LucasNovaes">Github</a></p>
+                    <p><a href="https://github.com/LucasNovaes"><i class="fa fa-github fa-3x sr-contact"></i></a></p>
                 </div>
             </div>
         </div>
