--- a/index.html
+++ b/index.html
@@ -414,19 +414,22 @@
                     <hr class="primary">
                     <p></p>
                 </div>
-                <div class="col-lg-6 text-center">
+                <div class="col-lg-6 text-right">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
                     <p><a href="tel:(31) 99407-0476">(31) 99407-0476</a></p>
                 </div>
-                <div class="col-lg-6 text-center">
+                <div class="col-lg-6 text-right">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
                     <p><a href="mailto:lucasmnovaes@gmail.com">lucasmnovaes@gmail.com</a></p>
                 </div>
-		<div class="col-lg-4 text-center">
+		<div class="col-lg-4 text-right">
                     <p><a href="https://www.linkedin.com/in/lucasmnovaes/"><i class="fa fa-linkedin fa-3x sr-contact"></i></a></p>
                 </div>
 		<div class="col-lg-4 text-center">
                     <p><a href="https://github.com/LucasNovaes"><i class="fa fa-github fa-3x sr-contact"></i></a></p>
+                </div>
+		<div class="col-lg-4 text-left">
+                    <p><a href="https://www.facebook.com/lucasmarconds"><i class="fa fa-facebook fa-3x sr-contact"></i></a></p>
                 </div>
             </div>
         </div>
