--- a/index.html
+++ b/index.html
@@ -415,8 +415,7 @@
                     <p></p>
                 </div>
 		    
-		<div class="col-lg-2"></div>
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
                     <p><a href="tel:(31) 99407-0476">(31) 99407-0476</a></p>
                 </div>
