--- a/index.html
+++ b/index.html
@@ -423,15 +423,14 @@
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
                     <p><a href="mailto:lucasmnovaes@gmail.com">lucasmnovaes@gmail.com</a></p>
                 </div>
-		<div class="col-lg-2"></div>
 		    
-		<div class="col-lg-5 text-right">
+		<div class="col-lg-5 col-md-4 col-xs-4 text-right">
                     <p><a href="https://www.linkedin.com/in/lucasmnovaes/"><i class="fa fa-linkedin fa-3x sr-contact"></i></a></p>
                 </div>
-		<div class="col-lg-2 text-center">
+		<div class="col-lg-2 col-md-4 col-xs-4 text-center">
                     <p><a href="https://github.com/LucasNovaes"><i class="fa fa-github fa-3x sr-contact"></i></a></p>
                 </div>
-		<div class="col-lg-5 text-left">
+		<div class="col-lg-5 col-md-4 col-xs-4 text-left">
                     <p><a href="https://www.facebook.com/lucasmarconds"><i class="fa fa-facebook fa-3x sr-contact"></i></a></p>
                 </div>
             </div>
