--- a/index.html
+++ b/index.html
@@ -424,15 +424,19 @@
                     <p><a href="mailto:lucasmnovaes@gmail.com">lucasmnovaes@gmail.com</a></p>
                 </div>
 		    
-		<div class="col-lg-5 col-md-4 col-xs-4 text-right">
-                    <p><a href="https://www.linkedin.com/in/lucasmnovaes/"><i class="fa fa-linkedin fa-3x sr-contact"></i></a></p>
-                </div>
-		<div class="col-lg-2 col-md-4 col-xs-4 text-center">
-                    <p><a href="https://github.com/LucasNovaes"><i class="fa fa-github fa-3x sr-contact"></i></a></p>
-                </div>
-		<div class="col-lg-5 col-md-4 col-xs-4 text-left">
+		<div class="col-lg-3 col-md-3 col-xs-3 text-center">
                     <p><a href="https://www.facebook.com/lucasmarconds"><i class="fa fa-facebook fa-3x sr-contact"></i></a></p>
                 </div>
+		<div class="col-lg-3 col-md-3 col-xs-3 text-center">
+                    <p><a href="https://github.com/LucasNovaes"><i class="fa fa-github fa-3x sr-contact"></i></a></p>
+                </div>
+		<div class="col-lg-3 col-md-3 col-xs-3 text-center">
+                    <p><a href="https://www.linkedin.com/in/lucasmnovaes/"><i class="fa fa-linkedin fa-3x sr-contact"></i></a></p>
+                </div>
+		<div class="col-lg-3 col-md-3 col-xs-3 text-center">
+                    <p><a href="https://pt.stackoverflow.com/users/74632/lucas-novaes"><i class="fa fa-stack-overflow fa-3x sr-contact"></i></a></p>
+                </div>
+
             </div>
         </div>
     </section>
@@ -441,7 +445,7 @@
 	    <div class="container">
 	    	 <div class="row">
 	    	 	<div class="col-lg-12">
-	    			Copyright © 2017 Lucasmnovaes
+	    			Lucasmnovaes - 2017
 	    		</div>
 	    	</div>		
 	    </div>
