--- a/index.html
+++ b/index.html
@@ -424,16 +424,16 @@
                     <p><a href="mailto:lucasmnovaes@gmail.com">lucasmnovaes@gmail.com</a></p>
                 </div>
 		    
-		<div class="col-lg-3 col-md-3 col-xs-3 text-center">
+		<div class="col-lg-1 col-lg-offset-4 col-md-2 col-md-offset-2 col-xs-3 text-center">
                     <p><a href="https://www.facebook.com/lucasmarconds"><i class="fa fa-facebook fa-3x sr-contact"></i></a></p>
                 </div>
-		<div class="col-lg-3 col-md-3 col-xs-3 text-center">
+		<div class="col-lg-1 col-md-2 col-xs-3 text-center">
                     <p><a href="https://github.com/LucasNovaes"><i class="fa fa-github fa-3x sr-contact"></i></a></p>
                 </div>
-		<div class="col-lg-3 col-md-3 col-xs-3 text-center">
+		<div class="col-lg-1 col-md-2 col-xs-3 text-center">
                     <p><a href="https://www.linkedin.com/in/lucasmnovaes/"><i class="fa fa-linkedin fa-3x sr-contact"></i></a></p>
                 </div>
-		<div class="col-lg-3 col-md-3 col-xs-3 text-center">
+		<div class="col-lg-1 col-md-2 col-xs-3 text-center">
                     <p><a href="https://pt.stackoverflow.com/users/74632/lucas-novaes"><i class="fa fa-stack-overflow fa-3x sr-contact"></i></a></p>
                 </div>
 
