--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <p></p>
                 </div>            
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <img src="img/lucasmnovaes-foto.jpg" class="img-circle" alt="Cinque Terre">
+                    <img src="img/lucas-3 (2).jpg" class="img-circle" alt="Cinque Terre">
                     <p></p>
 			<p class="text-faded">Lucas Marcondes Novaes, 28 anos, natural de Lagoa Santa - MG<br/>
 				Graduado em Sistemas de Informação pela PUC Minas<br/>
