--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                     <p></p>
                 </div>            
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <img src="img/lucas-3 (2).jpg" class="img-circle" alt="Cinque Terre">
+                    <img src="img/lucas-3-2.jpg" class="img-circle" alt="Cinque Terre">
                     <p></p>
-			<p class="text-faded">Lucas Marcondes Novaes, 28 anos, natural de Lagoa Santa - MG<br/>
+			<p>Lucas Marcondes Novaes, 28 anos, natural de Lagoa Santa - MG<br/>
 				Graduado em Sistemas de Informação pela PUC Minas<br/>
                     Desenvolvedor Web desde 2014</p>
                     <a href="#services" class="page-scroll btn btn-default sr-button"><i class="fa fa-2x fa-angle-double-down"></i></a>
