--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <img src="img/lucas-3-21.jpg" class="img-circle" alt="Cinque Terre">
                     <p></p>
-			<p>Lucas Marcondes Novaes, 28 anos, natural de Lagoa Santa - MG<br/>
+			<p>Lucas Marcondes Novaes, 28 anos - Desenvolvedor Web há 4 anos<br/>
 				Graduado em Sistemas de Informação pela PUC Minas<br/>
-                    Desenvolvedor Web desde 2014</p>
+                    </p>
                     <a href="#services" class="page-scroll btn btn-default sr-button"><i class="fa fa-2x fa-angle-double-down"></i></a>
                 </div>
             </div>
