--- a/stackFrontQuestions.html
+++ b/stackFrontQuestions.html
@@ -23,7 +23,7 @@
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="style.css" />
-  <script src="javascpt.js"></script>
+  <link rel="stylesheet" type="text/css" href="stackStyle.css" />
+  <script src="stackJS.js"></script>
 </body>
 </html>
