--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Bem vindo(a)!</h1>
+                <h1 id="homeHeading">Web Developer</h1>
                 <hr>
-                <h3>Gostaria de criar um site ou uma solução de software específica?</h3>
-                <h3>Eu posso te ajudar.</h3><br/>
+                <h2>Plataformas Web, Landing Pages, Email Marketing e Aplicativos Mobile Android. </h2>
+                <h2>UX / UI Design</h2><br/>
                 <a href="#about" class="btn btn-primary page-scroll"><i class="fa fa-2x fa-angle-double-down"></i></a>
             </div>
         </div>
