--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">Web Developer</h1>
                 <hr>
-                <h2>Plataformas Web, Landing Pages, Email Marketing e Aplicativos Mobile Android. </h2>
+                <h2>Plataforma Web, Landing Page, Email Marketing e Aplicativo Android. </h2>
                 <h2>UX / UI Design</h2><br/>
                 <a href="#about" class="btn btn-primary page-scroll"><i class="fa fa-2x fa-angle-double-down"></i></a>
             </div>
