--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <p></p>
                 </div>            
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <img src="img/lucas-3-21.jpg" class="img-circle" alt="Cinque Terre">
+                    <img src="img/lucasnovaes.jpg" class="img-responsive" alt="Profile photo">
                     <p></p>
 			<p>Lucas Marcondes Novaes, 28 anos - Desenvolvedor Web há 4 anos<br/>
 				Graduado em Sistemas de Informação pela PUC Minas<br/>
