--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Sobre mim</h2>
+                    <h2 class="section-heading">Sobre</h2>
                     <hr class="light">
                     <p></p>
                 </div>            
-                <div class="col-lg-8 col-lg-offset-2 text-center">
+                <div class="col-lg-5 col-lg-offset-2">
                     <img src="img/lucasnovaes.jpg" class="img-responsive" alt="Profile photo">
-                    <p></p>
-			<p>Lucas Marcondes Novaes, 28 anos - Desenvolvedor Web há 4 anos<br/>
-				Graduado em Sistemas de Informação pela PUC Minas<br/>
-                    </p>
+		</div>
+                <div class="col-lg-4 col-lg-offset-2 text-center">
+		     <p>Lucas Marcondes Novaes, 28 anos - Desenvolvedor Web há 4 anos<br/>
+				Graduado em Sistemas de Informação pela PUC Minas<br/></p>
                     <a href="#services" class="page-scroll btn btn-default sr-button"><i class="fa fa-2x fa-angle-double-down"></i></a>
                 </div>
             </div>
