--- a/index.html
+++ b/index.html
@@ -88,10 +88,9 @@
                 <div class="col-lg-5 col-lg-offset-2">
                     <img src="img/lucasnovaes.jpg" class="img-responsive" alt="Profile photo">
 		</div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
+                <div class="col-lg-4">
 		     <p>Lucas Marcondes Novaes, 28 anos - Desenvolvedor Web há 4 anos<br/>
 				Graduado em Sistemas de Informação pela PUC Minas<br/></p>
-                    <a href="#services" class="page-scroll btn btn-default sr-button"><i class="fa fa-2x fa-angle-double-down"></i></a>
                 </div>
             </div>
         </div>
