--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
                     <img src="img/lucasnovaes.jpg" class="img-responsive" alt="Profile photo">
 		</div>
                 <div class="col-lg-4">
-		     <p>Lucas Marcondes Novaes, 28 anos - Desenvolvedor Web há 4 anos<br/>
-				Graduado em Sistemas de Informação pela PUC Minas<br/></p>
+		     <p>Lucas Marcondes Novaes, 28 anos
+			<p>Desenvolvedor Web há 4 anos</p><br/>
+			<p>Bacharel em Sistemas de Informação, PUC Minas, 2015</p>
                 </div>
             </div>
         </div>
