--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                 <div class="col-lg-5 col-lg-offset-2">
                     <img src="img/lucasnovaes.jpg" class="img-responsive" alt="Profile photo">
 		</div>
-                <div class="col-lg-4">
-		     <p>Lucas Marcondes Novaes, 28 anos
-			<p>Desenvolvedor Web há 4 anos</p><br/>
-			<p>Bacharel em Sistemas de Informação, PUC Minas, 2015</p>
+                <div class="col-lg-5">
+		     <p>Lucas Marcondes Novaes, 28 anos</p>
+			<p>Desenvolvedor Web há 4 anos</p>
+			<p>Bacharel em Sistemas de Informação, PUC Minas-2015</p>
                 </div>
             </div>
         </div>
