--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                     <img src="img/lucasnovaes.jpg" class="img-responsive" alt="Profile photo">
 		</div>
                 <div class="col-lg-5">
-		     <p>Lucas Marcondes Novaes, 28 anos</p>
-			<p>Desenvolvedor Web há 4 anos</p>
-			<p>Bacharel em Sistemas de Informação, PUC Minas-2015</p>
+		     <h3>Lucas Marcondes Novaes</h3>
+			<p>Desenvolvedor Web há 4 anos<br>
+			Bacharel em Sistemas de Informação, PUC Minas-2015</p>
                 </div>
             </div>
         </div>
