--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <p></p>
                 </div>            
                 <div class="col-lg-5 col-lg-offset-2">
-                    <img src="img/lucasnovaes.jpg" class="img-profile img-responsive" alt="Profile photo">
+                    <img src="img/lucasnovaes(2).jpg" class="img-profile img-responsive" alt="Profile photo">
 		</div>
                 <div class="col-lg-5">
 		     <h3>Lucas Marcondes Novaes</h3>
