--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt_BR">
 
 <head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Web Portfolio">
+    <meta name="author" content="Lucas M. Novaes">
 
     <title>Lucas Novaes</title>
 
@@ -85,10 +85,10 @@
                     <hr class="light">
                     <p></p>
                 </div>            
-                <div class="col-lg-5 col-lg-offset-2">
+                <div class="col-lg-5 col-lg-offset-3">
                     <img src="img/lucasnovaes(2).jpg" class="img-profile img-responsive" alt="Profile photo">
 		</div>
-                <div class="col-lg-5">
+                <div class="col-lg-4">
 		     <h3>Lucas Marcondes Novaes</h3>
 			<p>Desenvolvedor Web há 4 anos<br>
 			Bacharel em Sistemas de Informação, PUC Minas-2015</p>
