--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                     <hr class="light">
                     <p></p>
                 </div>            
-                <div class="col-lg-5 col-lg-offset-3">
+                <div class="col-lg-3 col-md-4 col-lg-offset-3">
                     <img src="img/lucasnovaes(2).jpg" class="img-profile img-responsive" alt="Profile photo">
 		</div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
 		     <h3>Lucas Marcondes Novaes</h3>
 			<p>Desenvolvedor Web há 4 anos<br>
 			Bacharel em Sistemas de Informação, PUC Minas-2015</p>
