--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Analista de Sistemas Web</h1>
+                <h1 id="homeHeading">Desenvolvimento de Sistemas Web</h1>
                 <hr>
-                <h2>Plataforma Web, Landing Page, Email Marketing e Aplicativo Android</h2>
+                <h2>Plataforma Web, Website, Landing Page, Email Marketing e Aplicativo Android</h2>
                 <h2>UX / UI Design</h2><br/><br/>
                 <a href="#about" class="btn btn-primary page-scroll"><i class="fa fa-2x fa-angle-double-down"></i></a>
             </div>
