--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">Sobre mim</a>
+                        <a class="page-scroll" href="#about">Sobre</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#services">Conhecimentos</a>
